<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">


    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:src="@drawable/ic_auth" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_email_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_bg_email"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:textSize="14sp"
            android:hint="@string/email"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <com.example.submission1intermediate.MyEditText
            android:id="@+id/ti_password_login"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_bg_email"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:textSize="14sp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/blue_700"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/blue_700"
            android:layout_height="40dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/blue_700"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/blue_700"
            android:layout_height="40dp"/>
    </androidx.cardview.widget.CardView>






</LinearLayout>