<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addstory.AddStory">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/black_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_story"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black_500"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="18dp"/>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        app:cardElevation="10dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_image_photo" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:backgroundTint="@color/blue_700"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="170dp"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/blue_700"
                android:layout_height="40dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue_700"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="170dp"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/blue_700"
                android:layout_height="40dp"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        app:cardElevation="10dp"
        android:layout_marginEnd="18dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_description"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:textSize="12sp"
            android:textAlignment="textStart"
            android:hint="@string/deskripri_add_story"/>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share Location"
            android:textStyle="bold"
            android:textColor="@color/black_500"
            android:textSize="20sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp" />
    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/blue_700"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/blue_700"
            android:layout_height="40dp"/>

    </androidx.cardview.widget.CardView>





</LinearLayout>